# python-bizneo

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  bizneo-module-home.nix  bizneo-module.nix  bizneo.nix  bizneo.py  bizneo_browser.py  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: pr-check.yaml
src/: absence_kind.py  absences_tasks.py  bizneo_requestor.py
src/api/: absence.py  absences_tasks.py  bizneo_requestor.py  logged_time.py  reports_tasks.py  schedule.py  user.py  webhook.py
src/browser/: library.py  notify.py
