[tool.poetry]
name = "python-bizneo"
version = "0.1.0"
description = ""
authors = ["Miguel Julián <figarocorso@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "./**/*"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
playwright = "^1.45.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.11.0"

[tool.poetry.scripts]
bizneo = "bizneo:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
